--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,7 @@ android {
             buildConfigField "String", "API_KEY", "\"c9856d0cb57c3f14bf75bdc6c063b8f3\""
         }
         debug {
+            debuggable true
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
             buildConfigField "String", "SERVER_URL", "\"https://api.themoviedb.org/3/\""
@@ -89,9 +90,19 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
     implementation 'com.squareup.moshi:moshi:1.13.0'
     kapt('com.squareup.moshi:moshi-kotlin-codegen:1.13.0')
-
+    implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2'
     // koin -DI
     implementation 'io.insert-koin:koin-android:3.2.0'
     implementation "io.insert-koin:koin-androidx-navigation:3.2.0"
+
+    // arrow
+    implementation 'io.arrow-kt:arrow-core:1.1.2'
+    implementation 'io.arrow-kt:arrow-syntax:0.11.0'
+    kapt 'io.arrow-kt:arrow-meta:1.6.1-alpha.5'
+
+
+    implementation('io.coil-kt:coil:2.1.0')
+    implementation('io.coil-kt:coil-svg:2.1.0')
+    implementation 'com.jakewharton.timber:timber:5.0.1'
 
 }
