--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,39 +61,42 @@ dependencies {
 
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
-
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
 
     // compose
-    def composeBom = platform('androidx.compose:compose-bom:2022.10.00')
+    def composeBom = platform('androidx.compose:compose-bom:2022.10.00') {
+        because("Bom will make it easier to use all of the latest stable versions at the same time.")
+    }
     implementation composeBom
     androidTestImplementation composeBom
 
-    implementation 'androidx.activity:activity-compose:1.6.1'
-    implementation 'androidx.compose.material:material:1.3.0'
+    implementation 'androidx.activity:activity-compose'
+    implementation 'androidx.compose.material:material'
     implementation "androidx.compose.ui:ui"
     debugImplementation "androidx.compose.ui:ui-test-manifest"
     androidTestImplementation "androidx.compose.ui:ui-test-junit4"
     debugImplementation "androidx.compose.ui:ui-tooling"
     implementation "androidx.compose.ui:ui-tooling-preview"
+    implementation "androidx.navigation:navigation-compose"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose"
 
 
     // Network
     implementation(platform("com.squareup.okhttp3:okhttp-bom:4.10.0"))
     implementation("com.squareup.okhttp3:okhttp")
     implementation("com.squareup.okhttp3:logging-interceptor")
-    implementation("com.squareup.okhttp3:okhttp-urlconnection")
+
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
     implementation 'com.squareup.moshi:moshi:1.13.0'
     kapt('com.squareup.moshi:moshi-kotlin-codegen:1.13.0')
-    implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2'
+
     // koin -DI
-    implementation 'io.insert-koin:koin-android:3.2.0'
-    implementation "io.insert-koin:koin-androidx-navigation:3.2.0"
+    implementation "io.insert-koin:koin-android:3.3.0"
+    implementation "io.insert-koin:koin-androidx-compose:3.3.0"
 
     // arrow
     implementation 'io.arrow-kt:arrow-core:1.1.2'
