--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,6 +82,8 @@ dependencies {
     implementation "androidx.compose.ui:ui-tooling-preview"
     implementation "androidx.navigation:navigation-compose"
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose"
+    implementation "androidx.compose.foundation:foundation"
+    implementation "com.google.accompanist:accompanist-swiperefresh:0.25.1"
 
 
     // Network
@@ -107,5 +109,6 @@ dependencies {
     implementation('io.coil-kt:coil:2.1.0')
     implementation('io.coil-kt:coil-svg:2.1.0')
     implementation 'com.jakewharton.timber:timber:5.0.1'
+    implementation "io.coil-kt:coil-compose:2.1.0"
 
 }
