--- a/data/build.gradle
+++ b/data/build.gradle
@@ -21,15 +21,16 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-            buildConfigField "String", "SERVER_URL", "\"https://api.themoviedb.org/3/\""
-            buildConfigField "String", "API_KEY", "\"c9856d0cb57c3f14bf75bdc6c063b8f3\""
+            buildConfigField("String", "API_KEY", API_KEY)
+            buildConfigField("String", "SERVER_URL", SERVER_URL)
         }
         debug {
             debuggable true
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-            buildConfigField "String", "SERVER_URL", "\"https://api.themoviedb.org/3/\""
-            buildConfigField "String", "API_KEY", "\"c9856d0cb57c3f14bf75bdc6c063b8f3\""
+            buildConfigField("String", "API_KEY", API_KEY)
+            buildConfigField("String", "SERVER_URL", SERVER_URL)
+
         }
     }
     compileOptions {
