--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,5 @@ kotlin.code.style=official
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
+API_KEY="c9856d0cb57c3f14bf75bdc6c063b8f3"
+SERVER_URL="https://api.themoviedb.org/3/"
