--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,18 +46,43 @@ android {
             excludes += '/META-INF/{AL2.0,LGPL2.1}'
         }
     }
+    composeOptions {
+        kotlinCompilerExtensionVersion '1.2.0'
+    }
+    buildFeatures {
+        compose true
+    }
 }
 
 dependencies {
     implementation project(path: ':data')
-    implementation project(path: ':bussiness')
+    implementation project(path: ':domain')
     implementation project(path: ':presentation')
+    implementation project(path: ':models')
+
 
     implementation 'androidx.core:core-ktx:1.9.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
+    // compose
+    def composeBom = platform('androidx.compose:compose-bom:2022.10.00') {
+        because("Bom will make it easier to use all of the latest stable versions at the same time.")
+    }
+    implementation composeBom
+    androidTestImplementation composeBom
+
+    implementation 'androidx.activity:activity-compose'
+    implementation 'androidx.compose.material:material'
+    implementation "androidx.compose.ui:ui"
+    debugImplementation "androidx.compose.ui:ui-test-manifest"
+    androidTestImplementation "androidx.compose.ui:ui-test-junit4"
+    debugImplementation "androidx.compose.ui:ui-tooling"
+    implementation "androidx.compose.ui:ui-tooling-preview"
+    implementation "androidx.navigation:navigation-compose"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose"
+    implementation "androidx.compose.foundation:foundation"
 
     // Network
     implementation(platform("com.squareup.okhttp3:okhttp-bom:4.10.0"))
