--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -41,9 +41,9 @@ android {
 }
 
 dependencies {
-    implementation project(path: ':bussiness')
-    implementation project(path: ':data')
+    implementation project(path: ':domain')
     implementation project(path: ':models')
+    implementation project(path: ':data')
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.7.0'
