--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -76,6 +76,8 @@ dependencies {
     implementation('io.coil-kt:coil-svg:2.1.0')
     implementation 'com.jakewharton.timber:timber:5.0.1'
     implementation "io.coil-kt:coil-compose:2.1.0"
+    implementation("io.coil-kt:coil-gif:2.2.2")
+
     // koin -DI
     implementation "io.insert-koin:koin-android:3.3.0"
     implementation "io.insert-koin:koin-androidx-compose:3.3.0"
